--- a/assets/src/sass/plugin-compat/_gutenberg.scss
+++ b/assets/src/sass/plugin-compat/_gutenberg.scss
@@ -1,47 +1,8 @@
-p.has-background {
-	padding: $padding_horizontal $padding_vertical;
-}
-
-.wp-block-quote {
-	margin: 0 0 $spacing_vertical;
-	color: $color__text-quote;
-
-	footer {
-		@include font-size(0.8);
-
-		position: relative;
-		margin-top: 1em;
-		color: $color__text-quote-footer;
-		font-style: normal;
-	}
-
-	&.blocks-quote-style-1 {
-		padding-left: 1em;
-		border-left: 4px solid $color__border-quote;
-	}
-
-	&.blocks-quote-style-2 {
-		padding: 0 1em;
-
-		p {
-			@include font-size(1.5);
-
-			font-style: italic;
-			line-height: 1.6;
-		}
-
-		footer {
-			@include font-size(1.2);
-
-			text-align: right;
-		}
-	}
-}
-
 .wp-block-pullquote {
 	padding: ($padding_horizontal * 3);
 	border-top: 4px solid $color__border-quote;
 	border-bottom: 4px solid $color__border-quote;
+	border-left: none;
 	color: $color__text-quote;
 	text-align: center;
 
@@ -65,7 +26,7 @@ p.has-background {
 .wp-block-separator {
 	border: 0;
 	border-bottom: 2px solid $color__border-separator;
-	max-width: 100px;
+	max-width: 8rem;
 }
 
 .wp-block-button {
@@ -86,6 +47,27 @@ p.has-background {
 			background-color: $color__background-button-hover;
 		}
 	}
+}
+
+.wp-block-gallery {
+	padding-left: 0;
+	list-style: none;
+
+	&.aligncenter .blocks-gallery-image,
+	&.aligncenter .blocks-gallery-item,
+	&.alignleft .blocks-gallery-image,
+	&.alignleft .blocks-gallery-item,
+	&.alignright .blocks-gallery-image,
+	&.alignright .blocks-gallery-item,
+	.blocks-gallery-image,
+	.blocks-gallery-item {
+		margin: ($spacing_vertical * 0.5);
+	}
+}
+
+.wp-block-cover-image {
+	width: auto;
+	height: 25rem;
 }
 
 .wp-block-image,
@@ -112,7 +94,7 @@ p.has-background {
 		body.no-sidebar .entry-footer &,
 		body.mce-content-body & {
 			@media (min-width: ($site_maxwidth-text + $padding_horizontal * 2)) {
-				padding-top: calc((100vw - #{$padding_horizontal} * 2 - 15px) * 0.5625);
+				padding-top: calc((100vw - #{$padding_horizontal} * 2) * 0.5625);
 			}
 
 			@media (min-width: ($site_maxwidth)) {
@@ -127,7 +109,15 @@ p.has-background {
 		body.no-sidebar .entry-footer &,
 		body.mce-content-body & {
 			@media (min-width: ($site_maxwidth-text + $padding_horizontal * 2)) {
-				padding-top: calc((100vw - 15px) * 0.5625);
+				padding-top: calc(100vw * 0.5625);
+			}
+		}
+
+		body.wrapped-layout.no-sidebar .entry-header &,
+		body.wrapped-layout.no-sidebar .entry-content &,
+		body.wrapped-layout.no-sidebar .entry-footer & {
+			@media (min-width: ($site_maxwidth-text + $padding_horizontal * 2)) {
+				padding-top: calc(#{$site_maxwidth} * 0.5625);
 			}
 		}
 	}
